commit amit rana

--- a/src/app/layout/blog/blog-details/blog-details.component.html
+++ b/src/app/layout/blog/blog-details/blog-details.component.html
@@ -37,7 +37,7 @@
                                     <div class="img-contant">
                                         <h5>Have any questions?</h5>
                                                        <div class="button-row">
-                                        <a routerLink="/book-session" class="button">
+                                        <a routerLink="/book-a-session-with-kenny-weiss" class="button">
                                             book a call with Kenny <span class="arrow"><i
                                                     class="fa-solid fa-arrow-right"></i></span>
                                         </a>
@@ -66,7 +66,7 @@
 
 
                 <div class="swiper testimoalkenny">
-                    <div class="elfsight-app-366dcc1f-99d9-4a0b-8b7d-6ca801f22dc5" data-elfsight-app-lazy></div>
+                    <div class="elfsight-app-d6f2f059-cbc8-410e-92ad-2e0c6b5b0a8c" data-elfsight-app-lazy></div>
 
                 </div>
 
