--- a/src/app/layout/feelings-wheel/feelings-wheel.component.html
+++ b/src/app/layout/feelings-wheel/feelings-wheel.component.html
@@ -91,7 +91,7 @@
                             disconnected from your authentic self. Download
                             it below to get started.</p>
                         <div class="button-row canter">  
-                                <a routerLink="/book-session" class="button while"> Book a call with Kenny</a>
+                                <a routerLink="/book-a-session-with-kenny-weiss" class="button while"> Book a call with Kenny</a>
                         </div>
                     </div>
 
@@ -116,7 +116,7 @@
 
 
                 <div class="swiper testimoalkenny">
-                    <div class="elfsight-app-366dcc1f-99d9-4a0b-8b7d-6ca801f22dc5" data-elfsight-app-lazy></div>
+                    <div class="elfsight-app-d6f2f059-cbc8-410e-92ad-2e0c6b5b0a8c" data-elfsight-app-lazy></div>
 
                 </div>
 
