--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -32,7 +32,7 @@
                         [routerLinkActiveOptions]="{ exact: true }">Meet Kenny</a></li>
                 <li><a routerLink="/courses" routerLinkActive="active"
                         [routerLinkActiveOptions]="{ exact: true }">Courses</a></li>
-                <li><a routerLink="/books" routerLinkActive="active"
+                <li><a routerLink="/books-by-kenny-weiss" routerLinkActive="active"
                         [routerLinkActiveOptions]="{ exact: true }">Books</a></li>
 
                 <li class="dropreletiv" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: false }">
@@ -54,7 +54,7 @@
                 <li class="mb4"><a routerLink="/contact" routerLinkActive="active"
                         [routerLinkActiveOptions]="{ exact: true }">Contact</a></li> 
                         
-                <li><a routerLink="/book-session" class="contact-nav">Book a Session</a></li>
+                <li><a routerLink="/book-a-session-with-kenny-weiss" class="contact-nav">Book a Session</a></li>
             </ul>
 
 
