--- a/src/app/layout/healing-services/services-details/childhood-trauma.component.html
+++ b/src/app/layout/healing-services/services-details/childhood-trauma.component.html
@@ -9,7 +9,7 @@
                 <h1>{{ service.acf?.as_parent_heading }}</h1>
                 <div [innerHTML]="service.acf?.intro_discription"></div>
 
-                <a class="button" routerLink="/book-session">{{ service.acf?.intro_button }}</a>
+                <a class="button" routerLink="/book-a-session-with-kenny-weiss">{{ service.acf?.intro_button }}</a>
 
 
             </div>
@@ -150,7 +150,7 @@
                             <p class="b">📘 Read the Book</p>
                         </td>
                         <td>Learn how emotional cycles form and how to break them</td>
-                        <td><a class="button" routerLink="/book-session">Get the Book</a></td>
+                        <td><a class="button" routerLink="/book-a-session-with-kenny-weiss">Get the Book</a></td>
                     </tr>
                     <tr>
                         <td>
@@ -164,7 +164,7 @@
                             <p class="b">🤝 Book a Session</p>
                         </td>
                         <td>Book a Session with Kenny directly to understand what’s right for you</td>
-                        <td><a class="button" routerLink="book-session">Book a Session</a></td>
+                        <td><a class="button" routerLink="/book-a-session-with-kenny-weiss">Book a Session</a></td>
                     </tr>
                 </tbody>
             </table>
@@ -236,7 +236,7 @@
 
 
                 <div class="swiper testimoalkenny">
-                    <div class="elfsight-app-366dcc1f-99d9-4a0b-8b7d-6ca801f22dc5" data-elfsight-app-lazy></div>
+                    <div class="elfsight-app-d6f2f059-cbc8-410e-92ad-2e0c6b5b0a8c" data-elfsight-app-lazy></div>
 
                 </div>
 
