--- a/src/app/layout/home/home.component.html
+++ b/src/app/layout/home/home.component.html
@@ -13,7 +13,7 @@
                             misery.</p>
                         <div class="button-row">
                             <a class="button whitebt" routerLink="/courses">Explore courses</a>
-                            <a class="button whitebt" routerLink="/book-session">Book a session with Kenny</a>
+                            <a class="button whitebt" routerLink="/book-a-session-with-kenny-weiss">Book a session with Kenny</a>
                         </div>
 
 
@@ -304,7 +304,7 @@
                             </li>
                             <div class="button-row" data-aos="fade-up" data-aos-duration="600">
                                 <a class="button" routerLink="/meet-kenny">Read Kenny’s Story</a>
-                                <a class="button" routerLink="/book-session">Book a Session With Kenny</a>
+                                <a class="button" routerLink="/book-a-session-with-kenny-weiss">Book a Session With Kenny</a>
                             </div>
                         </ul>
 
@@ -381,7 +381,7 @@
 
 
                 <div class="swiper testimoalkenny">
-                    <div class="elfsight-app-366dcc1f-99d9-4a0b-8b7d-6ca801f22dc5" data-elfsight-app-lazy></div>
+                    <div class="elfsight-app-d6f2f059-cbc8-410e-92ad-2e0c6b5b0a8c" data-elfsight-app-lazy></div>
 
                 </div>
 
@@ -481,7 +481,7 @@
                         <p>He specializes in helping people heal from their emotional hurts, co-dependence, and pain
                             from the past so they can once again love themselves. </p>
                         <div class="button-row canter">
-                            <a class="button" routerLink="/book-session">Book a Session With Kenny</a>
+                            <a class="button" routerLink="/book-a-session-with-kenny-weiss">Book a Session With Kenny</a>
                         </div>
                     </div>
 
@@ -535,7 +535,7 @@
                         <p>He specializes in helping people heal from their emotional hurts, co-dependence, and pain
                             from the past so they can once again love themselves. </p>
                         <div class="button-row canter">
-                            <a class="button" routerLink="/book-session">Book a Session With Kenny</a>
+                            <a class="button" routerLink="/book-a-session-with-kenny-weiss">Book a Session With Kenny</a>
                         </div>
                     </div>
 
