--- a/src/app/layout/meet-kenny/meet-kenny.component.html
+++ b/src/app/layout/meet-kenny/meet-kenny.component.html
@@ -172,7 +172,7 @@
                             </li>
                             <div class="button-row">
                                 <!-- <a class="button" href="meet-kenny.html">Read Kenny’s Story</a> -->
-                                <a class="button" routerLink="/book-session">Book a Session</a>
+                                <a class="button" routerLink="/book-a-session-with-kenny-weiss">Book a Session</a>
                             </div>
                         </ul>
                     </div>
@@ -270,7 +270,7 @@
                         </div>
                     </div>
 
-                    <a routerLink="/book-session" class="button">Book a session with Kenny</a>
+                    <a routerLink="/book-a-session-with-kenny-weiss" class="button">Book a session with Kenny</a>
                 </div>
             </div>
 
@@ -375,7 +375,7 @@
                         facility. He has met many of the counselors and highly recommends them if you or a loved one
                         is struggling with an addiction. Watch Kenny’s video to hear the story.</p>
 
-                    <a routerLink="/book-session" class="button mt-3">Book a session with Kenny</a>
+                    <a routerLink="/book-a-session-with-kenny-weiss" class="button mt-3">Book a session with Kenny</a>
 
 
                 </div>
@@ -407,7 +407,7 @@
                     <p>It’s where <b>inner work meets brain science —</b> and the results are
                         life-changing.</p>
 
-                    <a routerLink="/book-session" class="button mt-3">Talk to Kenny</a>
+                    <a routerLink="/book-a-session-with-kenny-weiss" class="button mt-3">Talk to Kenny</a>
 
 
                 </div>
@@ -582,7 +582,7 @@
 
 
                 <div class="swiper testimoalkenny">
-                    <div class="elfsight-app-366dcc1f-99d9-4a0b-8b7d-6ca801f22dc5" data-elfsight-app-lazy></div>
+                    <div class="elfsight-app-d6f2f059-cbc8-410e-92ad-2e0c6b5b0a8c" data-elfsight-app-lazy></div>
 
                 </div>
 
