--- a/src/app/layout/worst-day-cycle/wdc-details/wdc-details.component.html
+++ b/src/app/layout/worst-day-cycle/wdc-details/wdc-details.component.html
@@ -32,7 +32,7 @@
                                 <div class="img-contant">
                                     <h5>Have any questions?</h5> 
                                     <div class="button-row">
-                                        <a routerLink="/book-session" class="button">
+                                        <a routerLink="/book-a-session-with-kenny-weiss" class="button">
                                             book a call with Kenny <span class="arrow"><i
                                                     class="fa-solid fa-arrow-right"></i></span>
                                         </a>
