--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -30,7 +30,7 @@
     </div>
 
 
-    <div class="marquee">
+    <!-- <div class="marquee">
         <div class="marquee__inner">
             <div class="marquee__group">
                 <div class="instagram-feed">
@@ -91,8 +91,8 @@
             </div>
         </div>
 
-    </div>
-
+    </div> -->
+<!-- <div class="container"><div class="elfsight-app-ea19864a-6067-4003-85c9-928116aa744e" data-elfsight-app-lazy></div></div> -->
 
 
     <p class="rights-reserved">Copyright © 2025 Kenny Weiss | All Rights Reserved</p>
