--- a/src/app/layout/not-found/not-found.component.css
+++ b/src/app/layout/not-found/not-found.component.css
@@ -10,7 +10,7 @@
 
 .notfound-content h1 {
   font-size: 8rem;
-  color: #ff6b6b;
+  color: #512570;
   margin-bottom: 20px;
 }
 
@@ -27,16 +27,20 @@
 }
 
 .btn-home {
-  display: inline-block;
-  padding: 12px 25px;
-  background: #ff6b6b;
-  color: #fff;
-  border-radius: 6px;
-  text-decoration: none;
-  font-weight: 600;
   transition: background 0.3s;
+background-color: #512570;
+    font-weight: 500;
+    padding: 10px 20px;
+    text-decoration: none;
+    transition: 0.6s;
+    font-size: 15px;
+    color: #ffffff !important;
+    font-family: "Poppins", sans-serif;
+    border-radius: 1.875em;
+    padding-bottom: 13px;
+
 }
 
 .btn-home:hover {
-  background: #ff4c4c;
+  background: #512570;
 }
