--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -92,7 +92,7 @@
         </div>
 
     </div> -->
-<!-- <div class="container"><div class="elfsight-app-ea19864a-6067-4003-85c9-928116aa744e" data-elfsight-app-lazy></div></div> -->
+<div class="container"><div style="margin-top: 20px;" class="elfsight-app-ea19864a-6067-4003-85c9-928116aa744e" data-elfsight-app-lazy></div></div>
 
 
     <p class="rights-reserved">Copyright © 2025 Kenny Weiss | All Rights Reserved</p>
